k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: student-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student-app

  template:
    metadata:
      labels:
        app: student-app

    spec:
      containers:
        - name: student-app
          image: student-app:v4
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000
