k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: student-app-service

spec:
  selector:
    app: student-app

  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

  type: NodePort
