k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: student-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: studentapp.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: student-app-service
                port:
                  number: 3000
